--- a/templates/modules/client/svelte-context.hbs
+++ b/templates/modules/client/svelte-context.hbs
@@ -6,7 +6,7 @@ import {
   {{ pascalCase  model }}Input,
   {{ pascalCase  model }}Service,
   {{ pascalCase  model }}UpdateInput
-} from "@deboxsoft/{{ kebabCase projectName }}-api";
+} from "@deboxsoft/{{ kebabCase projectName }}-core";
 import {
   Logger,
   Pagination,
