--- a/templates/modules/client/svelte-function-context.hbs
+++ b/templates/modules/client/svelte-function-context.hbs
@@ -9,7 +9,7 @@ import {
   {{ pascalCase  model }}Service,
   {{ pascalCase  model }}UpdateInput,
   {{ pascalCase  model }}UpdateResponse
-} from "@deboxsoft/{{ kebabCase projectName }}-api";
+} from "@deboxsoft/{{ kebabCase projectName }}-core";
 import { Logger, Pagination, PaginationOptions } from "@deboxsoft/module-core";
 import { createEventEmitter } from "@deboxsoft/module-client";
 import { createPaginationStore, PaginationStore } from "@deboxsoft/module-client/libs/svelte";
