--- a/templates/modules/server/repo.hbs
+++ b/templates/modules/server/repo.hbs
@@ -1,4 +1,4 @@
-import { {{ pascalCase model }}, {{ pascalCase model }}DataInput, {{ pascalCase model }}Filter } from "@deboxsoft/{{ kebabCase projectName }}-api";
+import { {{ pascalCase model }}, {{ pascalCase model }}DataInput, {{ pascalCase model }}Filter } from "@deboxsoft/{{ kebabCase projectName }}-core";
 import { Container, Pagination, PaginationOptions } from "@deboxsoft/module-core";
 import { ModifiedResult, RepoTransactionOptions } from "@deboxsoft/module-server";
 
