--- a/templates/modules/server/index.hbs
+++ b/templates/modules/server/index.hbs
@@ -19,7 +19,7 @@ import {
   /* GEN-END: import-fastify */
 } from "./fastify";
 
-import { FastifyInstance } from "fastify";
+import { FastifyInstance } from "@deboxsoft/module-fastify";
 import { {{ pascalCase projectName }}ServerApiOptions } from "./fastify/types";
 import { {{ pascalCase projectName }}ServerModuleConfig } from "./types";
 
