--- a/templates/modules/server/service.hbs
+++ b/templates/modules/server/service.hbs
@@ -17,7 +17,7 @@ import {
   {{ pascalCase model }}UpdateInput,
   {{ pascalCase model }}DataInput,
   {{ constantCase model }}_SERVICE_KEY
-} from "@deboxsoft/{{ camelCase  projectName }}-core";
+} from "@deboxsoft/{{ kebabCase  projectName }}-core";
 import { MQEmitter } from "@deboxsoft/module-server";
 import { get{{ pascalCase model }}Repo, {{ pascalCase model }}Repo } from "../db";
 import { {{ pascalCase  projectName }}ServerModuleConfig } from "../types";
