feature: add mq function event

--- a/templates/modules/server/service.hbs
+++ b/templates/modules/server/service.hbs
@@ -5,7 +5,8 @@ import {
   CreateResult,
   UpdateResult,
   RemoveResult,
-  PaginationOptions
+  PaginationOptions,
+  getConfig
 } from "@deboxsoft/module-core";
 import {
   {{ pascalCase model }}Filter,
@@ -18,7 +19,7 @@ import {
   {{ pascalCase model }}DataInput,
   {{ constantCase model }}_SERVICE_KEY
 } from "@deboxsoft/{{ kebabCase  projectName }}-core";
-import { MQEmitter } from "@deboxsoft/module-server";
+import { MQEmitter, mq } from "@deboxsoft/module-server";
 import { get{{ pascalCase model }}Repo, {{ pascalCase model }}Repo } from "../db";
 import { {{ pascalCase  projectName }}ServerModuleConfig } from "../types";
 
@@ -32,9 +33,9 @@ export const create{{ pascalCase model }}ServiceServer = async (opts: {{ pascalC
 export class {{ pascalCase model }}ServiceServer implements {{ pascalCase model }}Service {
   logger: Logger;
   event: MQEmitter;
-  constructor(private {{ camelCase model }}Repo: {{ pascalCase model }}Repo, { event }: {{ pascalCase  projectName }}ServerModuleConfig) {
+  constructor(private {{ camelCase model }}Repo: {{ pascalCase model }}Repo) {
     this.logger = getLogger();
-    this.event = event;
+    this.event = mq(getConfig("event"));
   }
 
   async create(input: {{ pascalCase model }}Input): Promise<CreateResult> {
