--- a/templates/modules/core/service.hbs
+++ b/templates/modules/core/service.hbs
@@ -21,7 +21,7 @@ export const get{{ pascalCase model }}Service = <S extends {{ pascalCase model }
 export const has{{ pascalCase model }}Service = () => Container.has({{ constantCase model }}_SERVICE_KEY);
 export interface {{ pascalCase model }}Service {
   create(input: {{ pascalCase model }}Input): Promise<CreateResult>;
-  update(id: string, input: {{ pascalCase model }}UpdateInput): Promise<UpdateResult>;
+  update(id: string, input: Partial<{{ pascalCase model }}Input>): Promise<UpdateResult>;
   remove(id: string): Promise<RemoveResult>;
   findById(id: string): Promise<{{ pascalCase model }} | undefined>;
   find(filter?: Record<string, any>): Promise<{{ pascalCase model }}[]>;
