--- a/templates/modules/server/mongo-collection.hbs
+++ b/templates/modules/server/mongo-collection.hbs
@@ -1,7 +1,7 @@
 import { {{ pascalCase model }}Repo, {{ constantCase model }}_REPO_KEY } from "../";
 import { {{ pascalCase model }}Data, {{ pascalCase model }}DataInput, {{ pascalCase model }}Error, {{ pascalCase model }}Filter } from "@deboxsoft/{{ kebabCase projectName }}-core";
 
-import { Container, getLogger, Logger } from "@deboxsoft/module-core";
+import { type ID, Container, getLogger, Logger } from "@deboxsoft/module-core";
 import { BaseRepository, getMongoDb, Db, ObjectId, TransactionOptions } from "@deboxsoft/module-mongo";
 import { ModifiedResult } from "@deboxsoft/module-server";
 
@@ -30,13 +30,13 @@ export class {{ pascalCase model }}Collection extends BaseRepository<ObjectId, s
     throw new {{ pascalCase model }}Error({ code: "{{ constantCase model }}_CREATE_FAILED" });
   }
 
-  async update(id: string, input: Partial<{{ pascalCase model }}DataInput>, opts: TransactionOptions = {}): Promise<ModifiedResult<boolean>> {
+  async update(id: ID, input: Partial<{{ pascalCase model }}DataInput>, opts: TransactionOptions = {}): Promise<ModifiedResult<boolean>> {
     const _id = ObjectId.createFromHexString(id);
     const metadata = await this.collection.updateOne({ _id }, { $set: input }, opts);
     return { metadata, data: metadata.acknowledged };
   }
 
-  async remove(id: string | string[], opts: TransactionOptions = {}): Promise<ModifiedResult<boolean>> {
+  async remove(id: ID | ID[], opts: TransactionOptions = {}): Promise<ModifiedResult<boolean>> {
     if (Array.isArray(id)) {
       const _ids = id.map((_) => ObjectId.createFromHexString(_));
       const metadata = await this.collection.deleteMany({ _id: { $in: _ids } }, opts);
@@ -54,7 +54,7 @@ export class {{ pascalCase model }}Collection extends BaseRepository<ObjectId, s
       .toArray();
   }
 
-  async findById(id: string, opts: TransactionOptions = {}): Promise<{{ pascalCase model }}Data | undefined> {
+  async findById(id: ID, opts: TransactionOptions = {}): Promise<{{ pascalCase model }}Data | undefined> {
     try {
       const _id = ObjectId.createFromHexString(id);
       const query: Record<string, any> = { _id };
