--- a/templates/modules/server/service.hbs
+++ b/templates/modules/server/service.hbs
@@ -1,4 +1,5 @@
 import {
+  type ID
   Container,
   getLogger,
   Logger,
@@ -58,7 +59,7 @@ export class {{ pascalCase model }}ServiceServer implements {{ pascalCase model 
     throw new {{ pascalCase model }}Error({ code: "{{ constantCase model }}_CREATE_FAILED" });
   }
 
-  async update(id, input: Partial<{{ pascalCase model }}Input>): Promise<UpdateResult> {
+  async update(id: ID, input: Partial<{{ pascalCase model }}Input>): Promise<UpdateResult> {
     const dataInput: Partial<{{ pascalCase model }}DataInput> = {{ pascalCase model }}UpdateInput.parse(input);
     this.event.emit({ topic: {{ pascalCase model }}Event.onBeforeUpdate, id, input: dataInput });
     const { data } = await this.{{ camelCase model }}Repo.update(id, dataInput);
@@ -76,7 +77,7 @@ export class {{ pascalCase model }}ServiceServer implements {{ pascalCase model 
     throw new {{ pascalCase model }}Error({ code: "{{ constantCase model }}_UPDATE_FAILED", args: { id } });
   }
 
-  async remove(id: string): Promise<RemoveResult> {
+  async remove(id: ID): Promise<RemoveResult> {
     this.event.emit({ topic: {{ pascalCase model }}Event.onBeforeRemove, id });
     const { data } = await this.{{ camelCase model }}Repo.remove(id);
     if (data) {
@@ -89,7 +90,7 @@ export class {{ pascalCase model }}ServiceServer implements {{ pascalCase model 
     throw new {{ pascalCase model }}Error({ code: "{{ constantCase model }}_REMOVE_FAILED", args: { id } });
   }
 
-  async findById(id: string): Promise<{{ pascalCase model }} | undefined> {
+  async findById(id: ID): Promise<{{ pascalCase model }} | undefined> {
     return await this.{{ camelCase model }}Repo.findById(id);
   }
 
